<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/top_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/Random" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/left_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/Artists" />

            <Space
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/right_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/Lists" />
        </LinearLayout>

        <Button
            android:id="@+id/bottom_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/Info" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>